# ros1_humble_bridge_template

./: README.md
ros1-humble-bridge-builder-base/: Dockerfile  README.md
ros1_bridge/: Dockerfile
ros1_bridge/cpp_pubsub/: CMakeLists.txt
ros1_bridge/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
ros1_bridge/ros1_humble_bridge_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros1_bridge/ros1_humble_bridge_ws/install/ros1_bridge/lib/: liblog4cxx.so.12  librosconsole.so.3d  libroscpp.so.4d  libxmlrpcpp.so.3d
ros1_bridge/ros1_humble_bridge_ws/install/ros1_bridge/lib/ros1_bridge/: dynamic_bridge  parameter_bridge  simple_bridge  simple_bridge_1_to_2  simple_bridge_2_to_1  static_bridge  test_ros2_client_cpp
ros1_bridge/ros1_humble_bridge_ws/install/ros1_bridge/share/ament_index/resource_index/package_run_dependencies/: ros1_bridge
ros1_bridge/ros1_humble_bridge_ws/install/ros1_bridge/share/ros1_bridge/: local_setup.sh  package.sh
ros1_bridge/ros1_humble_bridge_ws/log/: latest_build
ros1_bridge/ros1_talker/: CMakeLists.txt  package.xml
ros1_bridge/ros1_talker/include/: ros1_talker.h
ros1_bridge/ros1_talker/launch/: ros1_talker.launch
ros1_pkgs_docker/: 1.roslaunch.sh  Dockerfile  instructions
ros1_pkgs_docker/ros1_talker/msg/: custom_msg.msg
ros1_pkgs_docker/ros1_talker/src/: ros1_talker.cpp  ros1_talker_node.cpp
ros2_pkgs_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_pkgs_ws/install/cpp_pubsub/include/cpp_pubsub/cpp_pubsub/msg/: custom_msg.h
ros2_pkgs_ws/install/cpp_pubsub/lib/cpp_pubsub/: talker
ros2_pkgs_ws/install/cpp_pubsub/share/ament_index/resource_index/rosidl_interfaces/: cpp_pubsub
ros2_pkgs_ws/install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
ros2_pkgs_ws/install/cpp_pubsub/share/cpp_pubsub/cmake/: ament_cmake_export_include_directories-extras.cmake  cpp_pubsub__rosidl_typesupport_cExport-noconfig.cmake  cpp_pubsub__rosidl_typesupport_cExport.cmake  cpp_pubsub__rosidl_typesupport_introspection_cExport-noconfig.cmake  export_cpp_pubsub__rosidl_generator_cExport-noconfig.cmake  export_cpp_pubsub__rosidl_generator_cExport.cmake  export_cpp_pubsub__rosidl_generator_pyExport-noconfig.cmake  export_cpp_pubsub__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
ros2_pkgs_ws/install/cpp_pubsub/share/cpp_pubsub/msg/: CustomMsg.idl  CustomMsg.msg  my_mapping_rules.yaml
ros2_pkgs_ws/log/: latest_build
ros2_pkgs_ws/src/cpp_pubsub/src/: subscriber_member_function_custom_msg.cpp
(+5 files in other folders)
