<?xml version="1.0"?>
<package format="2">
  <name>ros1_talker</name>
  <version>1.0.1</version>
  <description>The ros1_talker package</description>

  <maintainer email="alefilot@iti.gr">li9i</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
